# ANCHOR26

./: .gitignore  README.md  pyproject.toml  requirements.txt
dinov2/configs/: __init__.py  ssl3d_anisotropic_config.yaml  ssl3d_default_config.yaml  ssl3d_eval_config.yaml  ssl3d_isotropic_config.yaml
dinov2/configs/train/: ablation_v1_inplane_fov.yaml  ablation_v2_gated_rotations.yaml  ablation_v3_physical_crop.yaml  ablation_v4_combined.yaml  vit3d_highres_iso.yaml  vit3d_highres_rel.yaml  vit3d_highres_sa.yaml
dinov2/data/: __init__.py  adapters.py  augmentations.py  augmentations_experimental.py  collate.py  loaders.py  masking.py  modality_adaptive_fov.py  spacing_aware_transforms.py  transforms.py
dinov2/distributed/: __init__.py
dinov2/eval/: linear3d.py  metrics.py  segmentation3d.py  setup.py  utils.py  vis_pca.py
dinov2/eval/segmentation_3d/: adapter_modules.py  augmentations.py  metrics.py  segmentation_heads.py  vit_adapter.py
dinov2/fsdp/: __init__.py
dinov2/layers/: attention.py  block.py  dino_head.py  patch_embed3d.py  swiglu_ffn.py
dinov2/loss/: dino_clstoken_loss.py  ibot_patch_loss.py  srcibloss.py
dinov2/models/: vision_transformer.py
dinov2/train/: ssl_meta_arch.py  train3d.py
dinov2/utils/: config.py  utils.py
eval_downstream/medfm_eval/: cmd.sh
tests/: test_module3_anatomical_generalization_smoke.py  test_module3_case_disjoint_protocols.py  test_phase1_anisotropy_smoke.py  test_phase2_evaluation_pipeline.py  test_phase2_single_organ_alignment.py  test_segmentation_metrics.py  test_segmentation_setup.py
(+81 files in other folders)
