[project]
name = "med3dino"
version = "0.1.0"
description = "Med3DINO release with REFORM-3D benchmark modules"
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=1.3.3",
    "nibabel>=5.3.3",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
